cluster/base/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
